[gd_scene load_steps=3 format=3 uid="uid://bs5htfx2jnvny"]

[ext_resource type="Script" uid="uid://cbkxole10jwq" path="res://scripts/kill_zone.gd" id="1_kebdr"]
[ext_resource type="AudioStream" uid="uid://bra74wbxh5qrd" path="res://assets/sounds/explosion.wav" id="2_l4ff3"]

[node name="KillZone" type="Area2D"]
collision_mask = 2
script = ExtResource("1_kebdr")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.6
one_shot = true

[node name="KillSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_l4ff3")
bus = &"SFX"

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
